記録のリセットを機能を作成
